@@ -7,3 +7,4 @@
 
 3. soil texture plotting / subsetting / flagging helper function or guidance
 
+4. finish NASIS component queries
